# febench

./: README.md  pyproject.toml
examples/: carbon_config.yaml  config.yaml  config_tm.yaml  run.sh
examples/input/: data.extxyz
examples/mlip/7net-0/: POSCAR_base  carbon_config.yaml  config.yaml
examples/output/: Fe_properties.csv  carbon_E_bind.csv
examples/output/tm/: Ag_solute_E_bind.csv  Ag_vacancy_E_bind.csv  Au_solute_E_bind.csv  Au_vacancy_E_bind.csv  Co_solute_E_bind.csv  Co_vacancy_E_bind.csv  Cr_solute_E_bind.csv  Cr_vacancy_E_bind.csv  Cu_solute_E_bind.csv  Cu_vacancy_E_bind.csv  Fe_solute_E_bind.csv  Fe_vacancy_E_bind.csv  Hf_solute_E_bind.csv  Hf_vacancy_E_bind.csv  Ir_solute_E_bind.csv  Ir_vacancy_E_bind.csv  Mn_solute_E_bind.csv  Mn_vacancy_E_bind.csv  Mo_solute_E_bind.csv  Mo_vacancy_E_bind.csv  Nb_solute_E_bind.csv  Nb_vacancy_E_bind.csv  Ni_solute_E_bind.csv  Ni_vacancy_E_bind.csv  Os_solute_E_bind.csv  Os_vacancy_E_bind.csv  Pd_solute_E_bind.csv  Pd_vacancy_E_bind.csv  (+20 more)
febench/: carbon_config.yaml  main.py
febench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
febench/carbon/: script.py  util.py  utils.py
febench/pureFe/: matscipy_metrics.py  script.py  utils.py
febench/tm/: script.py  util.py  utils.py
febench/util/: calc.py  parse_args.py  parse_calc.py  parse_calc_config.py  parse_config.py  relax.py  utils.py
test/STEEL_UMA_ESEN/: parse_esen.py  parse_uma.py  relax_metrics.py  run_esen.sh  run_uma.sh  script_esen.py  script_uma.py  structure_generation.py
test/febench/: carbon_config.yaml  config.yaml
(+1861 files in other folders)
